Fixed form/button spacing on hover
Plus other font size/color issues that came to light when viewing on mobile device; Will need more testing and adjustments

--- a/css/styles.css
+++ b/css/styles.css
@@ -385,7 +385,7 @@ h3 {
 }
 
 .project-photo a {
-    color: var(--light-purple);
+    color: var(--dark-purple);
     font-weight: 500;
     text-decoration: none;
     cursor: pointer;
@@ -465,11 +465,11 @@ form {
     background-color: var(--light-purple);
     border-radius: 5px;
     padding: 20px 10px 30px;
-    max-width: 350px;
-    max-height: 552px;
+    max-width: 450px;
     margin: 0 auto;
     width: 95%;
     border: 3px solid var(--dark-purple);
+    height: 575px;
 }
 
 form h2 {
@@ -501,6 +501,7 @@ label,
 label {
     font-size: 1.1rem;
     font-weight: 500;
+    color: var(--dark-purple);
 }
 
 #firstName,
@@ -533,11 +534,12 @@ textarea:focus {
 textarea {
     width: 100%;
     height: 100px;
+    margin-bottom: 35px;
 }
 
 #send {
     width: 80%;
-    margin: 25px auto 0;
+    margin: 0 auto;
     padding: 5px 10px;
     background-color: var(--dark-purple);
     color: var(--charcoal);
@@ -573,7 +575,7 @@ footer {
 footer p {
     margin: 0 auto 20px;
     color: var(--white);
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     font-weight: 600;
     transition-property: 'transform';
     transition-duration: .5s;
